--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,9 +1,15 @@
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
+@import 'colors';
 
+.gameboard {
+  background-color: $boardColor;
+  height: 500px;
+  max-width: 500px;
+}
 
 .square {
-  border: 2px solid #000000;
-  height: 100px;
-  // width: 100px;
+  border: 2px solid $gridColor;
+  height: 150px;
+  max-width: 150px;
 }
