add show/hide for login buttons
dropdown is hidden by default, after log in dropdown is shown and
login/signup is hidden.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -13,3 +13,15 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
   height: 150px;
   max-width: 150px;
 }
+
+// .dropdown-toggle {
+//   visibility: hidden;
+// }
+//
+// #sign-up {
+//   visibility: visible;
+// }
+//
+// #log-in {
+//   visibility: visible;
+// }
