--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -14,6 +14,11 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
   max-width: 150px;
 }
 
+.square > img {
+  height: 100px;
+  width: 100px;
+}
+
 // .dropdown-toggle {
 //   visibility: hidden;
 // }
