--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -21,14 +21,7 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
   padding: 0;
 }
 
-// .dropdown-toggle {
-//   visibility: hidden;
-// }
-//
-// #sign-up {
-//   visibility: visible;
-// }
-//
-// #log-in {
-//   visibility: visible;
-// }
+.footer {
+  padding-top: 20px;
+  text-align: center;
+}
